--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,22 @@
-streamlit>=1.30.0
+# Biofloc Monitor UCN - Dependencies
+# Python 3.10+ required
+
+# Web Framework
+streamlit>=1.36.0
+
+# Data Processing
 pandas>=2.0.0
-pymongo>=4.0.0
-python-dotenv>=1.0.0
-plotly>=5.18.0
-openpyxl>=3.1.0
-certifi>=2024.0.0
 numpy>=1.26.0
+
+# Database
+pymongo>=4.0.0
+certifi>=2024.0.0
+
+# Environment Variables
+python-dotenv>=1.0.0
+
+# Visualization
+plotly>=5.18.0
+
+# Excel Export
+openpyxl>=3.1.0
